Fix question-navigation buttons from sometimes wrapping onto new line (especially on IE).

--- a/app/client/stylesheets/smartervote.import.less
+++ b/app/client/stylesheets/smartervote.import.less
@@ -349,9 +349,9 @@
   display: flex;
   
   button {
-    -webkit-flex: 1 0 25%;
-    -ms-flex: 1 0 25%;
-    flex: 1 0 25%;
+    -webkit-flex: 0 0 24%;
+    -ms-flex: 0 0 24%;
+    flex: 0 0 24%;
     
     padding: 0;
     
@@ -369,9 +369,9 @@
   }
   
   #gotoEvaluation {
-    -webkit-flex: 1 0 50%;
-    -ms-flex: 1 0 50%;
-    flex: 1 0 50%;
+    -webkit-flex: 1 1 50%;
+    -ms-flex: 1 1 50%;
+    flex: 1 1 50%;
     
     border: @border-default;
     border-top: 0;
